# gfa_io

./: README.md  pyproject.toml  requirements.txt  setup.py
gfa_io/: __init__.py  command_line.py  gfa_io.py
src/gfa_io/: __init__.py  command_line.py  gfa_io.py
test_data/: MT.fasta
tests/: test_command_line.py  test_gfa_io.py
