[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gfa_io"
version = "0.3"
description = "A simple package for reading GFA files with a few utilities"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Matthew Z DeMaere", email = "matt.demaere@gmail.com"},
]
keywords = ["bioinformatics", "genomics", "genome assembly"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "biopython",
    "networkx",
    "pandas",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/cerebis/gfa_io"
Repository = "https://github.com/cerebis/gfa_io.git"

[project.scripts]
gfa_utils = "gfa_io.command_line:main"

[dependency-groups]
docs = ["sphinx"]
test = ["pytest == 8.3.5", "biopython"]
lint = ["mypy == 1.16.0", "ruff == 0.11.12"]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
]

[tool.setuptools]
include-package-data = false
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["gfa_io*"]
exclude = ["gfa_io.egg-info*", "tests*", "test_data*"]
namespaces = false

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
